para color change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Motivation Meme</title>
+  <title>Card</title>
   <link rel="stylesheet" href="./style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
 <body>
   <div class="poster">
     <img class="poster-img" src="https://hemanthkumar1111999.github.io/Profile/Images/IMG_20240512_144126.jpg" src="having cool drinks with friends" />
-    <h1>That Special Moment</h1>
+    <h1>Special Moment</h1>
     <p>Celebriting get-together with my friends</p>
   </div> 
 </body>
